--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-/*  your css code here. If applicable */
+ table {
+            width: 50%;
+            margin: 20px auto;
+            background-color: yellow;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 12px;
+            text-align: center;
+            border: 1px solid black;
+        }
+        th {
+            font-weight: bold;
+            font-size: 16px;
+        }
+        caption {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
